# FileGenerator

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
src/file_generator/: __init__.py  app.py  models.py
src/file_generator/generators/: __init__.py  base.py  delimited.py  excel.py
src/file_generator/services/: __init__.py  exceptions.py  generation_service.py
src/file_generator/ui/: __init__.py  main_window.py  workers.py
src/file_generator/utils/: __init__.py  rows.py  size_helpers.py
tests/: test_delimited_generator.py  test_tab_delimited_generator.py
