[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-generator"
version = "0.1.0"
description = "GUI tool for generating large spreadsheet-style files for integration testing."
authors = [{name = "FileGenerator Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "openpyxl>=3.1",
    "mypy>=1.8",
    "black>=23.11",
    "ruff>=0.1.9",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
plugins = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
